# nanoGPT

./: calculate_stats.py  compute_correlation.py  generate_tables.py  output_1.json  perf_parse.py  pyproject.toml  run_benchmark.fish  run_metrics.fish  strace_parse.py  tables.txt  train.py
.github/workflows/: release.yaml
6.11.0-4-cachyos-eevdf/baseline/: run_1.txt  run_11.json  run_11.txt  run_13.txt  run_14.json  run_14.txt  run_15.txt  run_16.txt  run_17.txt  run_19.json  run_2.txt  run_21.json  run_21.txt  run_22.json  run_23.json  run_23.txt  run_25.txt  run_26.txt  run_28.json  run_29.json  run_29.txt  run_3.json  run_6.txt  run_7.txt  run_8.json  run_9.json
6.11.0-4-cachyos-eevdf/jemalloc-thp/: run_1.json  run_1.txt  run_10.txt  run_11.json  run_12.json  run_12.txt  run_14.json  run_14.txt  run_15.json  run_15.txt  run_16.txt  run_19.json  run_2.txt  run_20.txt  run_21.txt  run_22.txt  run_23.json  run_24.json  run_26.json  run_27.json  run_28.json  run_28.txt  run_29.json  run_29.txt  run_4.json  run_4.txt  run_5.json  run_6.json  run_7.json  run_9.json
6.11.5-arch1-1/baseline/: run_1.json  run_1.txt  run_10.json  run_10.txt  run_11.json  run_11.txt  run_12.json  run_12.txt  run_13.json  run_13.txt  run_14.json  run_14.txt  run_15.json  run_15.txt  run_16.json  run_16.txt  run_17.json  run_17.txt  run_18.json  run_18.txt  run_19.json  run_19.txt  run_2.json  run_2.txt  run_20.json  run_20.txt  run_21.json  run_21.txt  run_22.json  run_22.txt  run_23.json  run_23.txt  run_24.json  run_24.txt  run_25.json  run_25.txt  run_26.json  run_26.txt  run_27.json  (+21 more)
(+625 files in other folders)
