[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
  "datasets>=3.1.0",
  "numpy>=2.2.0",
  "torch==2.4.1",
  "transformers>=4.47.0",
  "tiktoken>=0.8.0",
  "wandb>=0.19.1",
  "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
